tests/expectations/compiler/finalize/shadow_mapping_fail.out
Error [EAST0372017]: The name `bar` is defined multiple times.
    --> compiler-test:4:5
     |
   4 |       mapping bar: u8 => u8;
     |       ^^^^^^^^^^^^^^^^^^^^^^ `bar` redefined here
   ...
  19 |       struct bar {
     |              ^^^ previous definition of `bar` here
Error [EAST0372017]: The name `bar` is defined multiple times.
    --> compiler-test:6:16
     |
   6 |       transition bar(a: u8) -> u8 {
     |                  ^^^ `bar` redefined here
   ...
  19 |       struct bar {
     |              ^^^ previous definition of `bar` here
